--- a/app/views/say/hello.html.erb
+++ b/app/views/say/hello.html.erb
@@ -1,3 +1,12 @@
-<h1>Say#hello</h1>
+<%# <h1>Say#hello</h1>
 <p>Find me in app/views/say/hello.html.erb</p>
-<h2>how about you</h2>
+<h2>how about you</h2> %>
+<h1>Hello from rails</h1>
+
+<p>
+  » It is now <%= @time %>
+</p>
+
+<p>
+Say <a href="/say/goodbye">Goodbye</a>!
+</p>
